--- a/Sriracha.Server/packages.config
+++ b/Sriracha.Server/packages.config
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.0" targetFramework="net45" />
+  <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
+  <package id="Nancy" version="0.23.2" targetFramework="net45" />
+  <package id="Nancy.Hosting.Owin" version="0.16.0" targetFramework="net45" />
+  <package id="Nancy.Owin" version="0.23.2" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Topshelf" version="3.1.4" targetFramework="net45" />
 </packages>
