--- a/Sriracha.Server/packages.config
+++ b/Sriracha.Server/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
+  <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.0" targetFramework="net45" />
