--- a/Sriracha.Data/Sriracha.Data.csproj
+++ b/Sriracha.Data/Sriracha.Data.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Logging\" />
+    <Folder Include="Reflection\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
