--- a/Sriracha.Web/packages.config
+++ b/Sriracha.Web/packages.config
@@ -7,4 +7,5 @@
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Nancy" version="0.23.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
 </packages>
