--- a/Sriracha.Data/Sriracha.Data.csproj
+++ b/Sriracha.Data/Sriracha.Data.csproj
@@ -36,6 +36,9 @@
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.2.3.1\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -53,11 +56,16 @@
     <Compile Include="Deployment\IDeployStatusReporter.cs" />
     <Compile Include="Deployment\IDeployTask.cs" />
     <Compile Include="Deployment\IDeployTaskRunner.cs" />
+    <Compile Include="Deployment\TaskExecutionContext.cs" />
     <Compile Include="Ioc\IIocFactory.cs" />
     <Compile Include="Ioc\IIocBuilderWrapper.cs" />
     <Compile Include="Ioc\ISrirachaIocRegistar.cs" />
     <Compile Include="JsonExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\IProcessRunner.cs" />
+    <Compile Include="Utility\IZipper.cs" />
+    <Compile Include="Utility\UtilityImpl\ProcessRunner.cs" />
+    <Compile Include="Utility\UtilityImpl\Zipper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Logging\" />
