--- a/Sriracha.Data/packages.config
+++ b/Sriracha.Data/packages.config
@@ -4,5 +4,6 @@
   <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
   <package id="CsvHelper" version="2.10.0" targetFramework="net45" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
+  <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
 </packages>
