--- a/Sriracha.DeployRunner/packages.config
+++ b/Sriracha.DeployRunner/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
   <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
+  <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
 </packages>
