--- a/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
+++ b/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
@@ -33,6 +33,12 @@
     <Reference Include="Common.Logging">
       <HintPath>..\packages\Common.Logging.2.3.1\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="dropkick">
+      <HintPath>..\ThirdParty\dropkick-trunk\dropkick.dll</HintPath>
+    </Reference>
+    <Reference Include="MMDB.Shared">
+      <HintPath>..\packages\MMDB.Shared.2.0.0.20\lib\net35\MMDB.Shared.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -56,6 +62,8 @@
       <DependentUpon>DropkickResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Dropkick\DropkickRunnerContext.cs" />
+    <Compile Include="Dropkick\DropkickWebDeployment.cs" />
+    <Compile Include="Dropkick\DropkickWebDeploymentSettings.cs" />
     <Compile Include="Dropkick\IDropkickRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
