--- a/Sriracha.Data/packages.config
+++ b/Sriracha.Data/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
   <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
   <package id="CsvHelper" version="2.10.0" targetFramework="net45" />
