--- a/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
+++ b/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
