--- a/Sriracha.DeployRunner/Sriracha.DeployRunner.csproj
+++ b/Sriracha.DeployRunner/Sriracha.DeployRunner.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{26E3B370-E514-48F3-8979-109421D97AE5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sriracha.DeployRunner</RootNamespace>
+    <RootNamespace>srircha.run</RootNamespace>
     <AssemblyName>Sriracha.DeployRunner</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
