--- a/DeployTask/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
+++ b/DeployTask/Sriracha.DeployTask.WebApplication/Sriracha.DeployTask.WebApplication.csproj
@@ -34,8 +34,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Common.Logging.2.3.1\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="dropkick">
-      <HintPath>..\ThirdParty\dropkick-trunk\dropkick.dll</HintPath>
+    <Reference Include="dropkick, Version=0.4.13.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\ThirdParty\dropkick-trunk\dropkick.dll</HintPath>
     </Reference>
     <Reference Include="MMDB.Shared, Version=2.0.0.20, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -85,6 +86,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>DropkickResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
