--- a/Sriracha.Web/packages.config
+++ b/Sriracha.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
   <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
@@ -9,6 +10,7 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Nancy" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.1" targetFramework="net45" />
   <package id="Nancy.Hosting.Aspnet" version="1.1" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
