--- a/Sriracha.Data/packages.config
+++ b/Sriracha.Data/packages.config
@@ -7,5 +7,7 @@
   <package id="CsvHelper" version="2.11.1.1" targetFramework="net45" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
+  <package id="Nancy" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Authentication.Forms" version="1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
 </packages>
