--- a/Sriracha.Web/packages.config
+++ b/Sriracha.Web/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Nancy" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Authentication.Forms" version="1.1" targetFramework="net45" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.1" targetFramework="net45" />
   <package id="Nancy.Hosting.Aspnet" version="1.1" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.1" targetFramework="net45" />
