--- a/Sriracha.Web/Web.config
+++ b/Sriracha.Web/Web.config
@@ -10,10 +10,12 @@
     </sectionGroup>
   </configSections>
   <system.web>
-    <compilation debug="true" targetFramework="4.5"><buildProviders>
+    <compilation debug="true" targetFramework="4.5">
+      <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
         <add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
-      </buildProviders></compilation>
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
@@ -26,12 +28,15 @@
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
   </system.webServer>
-<appSettings>
+  <appSettings>
     <add key="webPages:Enabled" value="false" />
-  </appSettings><system.web.webPages.razor>
+    <add key="RepositoryAssemblyName" value="Sriracha.Repository.LiteDB.dll"/>
+  </appSettings>
+  <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
       <namespaces>
         <add namespace="Nancy.ViewEngines.Razor" />
       </namespaces>
     </pages>
-  </system.web.webPages.razor></configuration>
+  </system.web.webPages.razor>
+</configuration>
