--- a/Sriracha.Data/Sriracha.Data.csproj
+++ b/Sriracha.Data/Sriracha.Data.csproj
@@ -55,8 +55,9 @@
     <Reference Include="Ionic.Zip">
       <HintPath>..\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
     </Reference>
-    <Reference Include="MMDB.Shared">
-      <HintPath>..\packages\MMDB.Shared.2.0.0.20\lib\net35\MMDB.Shared.dll</HintPath>
+    <Reference Include="MMDB.Shared, Version=2.0.0.21, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MMDB.Shared.2.0.0.21\lib\net35\MMDB.Shared.dll</HintPath>
     </Reference>
     <Reference Include="Nancy">
       <HintPath>..\packages\Nancy.1.1\lib\net40\Nancy.dll</HintPath>
@@ -87,6 +88,8 @@
     <Compile Include="Deployment\IDeployTask.cs" />
     <Compile Include="Deployment\IDeployTaskRunner.cs" />
     <Compile Include="Deployment\TaskExecutionContext.cs" />
+    <Compile Include="Dto\Account\SrirachaUser.cs" />
+    <Compile Include="Dto\BaseDto.cs" />
     <Compile Include="Impersonation\DeployCredentialsMasked.cs" />
     <Compile Include="Impersonation\IImpersonator.cs" />
     <Compile Include="Impersonation\ImpersonationContext.cs" />
@@ -100,6 +103,8 @@
     <Compile Include="Nancy\NancyUserMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IProjectRepository.cs" />
+    <Compile Include="Repository\ISrirachaRepositoryRegistar.cs" />
+    <Compile Include="Repository\IUserRepository.cs" />
     <Compile Include="Utility\IProcessRunner.cs" />
     <Compile Include="Utility\IZipper.cs" />
     <Compile Include="Utility\UtilityImpl\ProcessRunner.cs" />
