Setup/Login with LiteDB

--- a/Sriracha.Web/Web.config
+++ b/Sriracha.Web/Web.config
@@ -31,6 +31,7 @@
   <appSettings>
     <add key="webPages:Enabled" value="false" />
     <add key="RepositoryAssemblyName" value="Sriracha.Repository.LiteDB.dll"/>
+    <add key="LiteDBDirectory" value="..\LiteDBData"/>
   </appSettings>
   <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
