--- a/Sriracha.Data/Sriracha.Data.csproj
+++ b/Sriracha.Data/Sriracha.Data.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -80,7 +81,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Authentication\IAuthenticator.cs" />
-    <Compile Include="Authentication\Impl\Authenticator.cs" />
     <Compile Include="Deployment\DeploymentImpl\JsonDeployStatusReporter.cs" />
     <Compile Include="Deployment\DeploymentImpl\DeployTaskRunner.cs" />
     <Compile Include="Deployment\DeploymentImpl\LoggerDeployStatusReporter.cs" />
@@ -90,6 +90,9 @@
     <Compile Include="Deployment\TaskExecutionContext.cs" />
     <Compile Include="Dto\Account\SrirachaUser.cs" />
     <Compile Include="Dto\BaseDto.cs" />
+    <Compile Include="Identity\Impl\ConsoleSrirachaIdentity.cs" />
+    <Compile Include="Identity\Impl\WebSrirachaIdentity.cs" />
+    <Compile Include="Identity\ISrirachaIdentity.cs" />
     <Compile Include="Impersonation\DeployCredentialsMasked.cs" />
     <Compile Include="Impersonation\IImpersonator.cs" />
     <Compile Include="Impersonation\ImpersonationContext.cs" />
@@ -99,8 +102,10 @@
     <Compile Include="Ioc\ISrirachaIocRegistar.cs" />
     <Compile Include="JsonExtensions.cs" />
     <Compile Include="ListExtensions.cs" />
-    <Compile Include="Nancy\NancyUserIdentity.cs" />
-    <Compile Include="Nancy\NancyUserMapper.cs" />
+    <Compile Include="Managers\IUserManager.cs" />
+    <Compile Include="Managers\ManagersImpl\UserManager.cs" />
+    <Compile Include="NancyFX\NancyUserIdentity.cs" />
+    <Compile Include="NancyFX\NancyUserMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IProjectRepository.cs" />
     <Compile Include="Repository\ISrirachaRepositoryRegistar.cs" />
