--- a/Sriracha.Web/Sriracha.Web.csproj
+++ b/Sriracha.Web/Sriracha.Web.csproj
@@ -150,6 +150,7 @@
     <Compile Include="LoginModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecureModule.cs" />
+    <Compile Include="SetupModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
