Fix for login in with LiteDB in service

--- a/Sriracha.Server/App.config
+++ b/Sriracha.Server/App.config
@@ -12,6 +12,7 @@
     <add key="WebPath" value="..\..\..\Sriracha.Web" />
     <add key="webPages:Enabled" value="false" />
     <add key="RepositoryAssemblyName" value="Sriracha.Repository.LiteDB.dll"/>
+    <add key="LiteDBDirectory" value="..\..\..\LiteDBData"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
